--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ thead {
 }
 
 .navbar a {
-  color: #394b38;
+  color: #5d341b;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.2s;
