--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ thead {
 }
 /* Dark Green Navigation Bar */
 .navbar {
-  background-color: #205225; /* Dark green */
+  background-color: #5d341b; /* Dark green */
   padding: 1rem 2rem;
   display: flex;
   align-items: center;
@@ -106,14 +106,14 @@ thead {
 }
 
 .navbar a {
-  color: #5d341b;
+  color: #ffde59;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.2s;
 }
 
 .navbar a:hover {
-  color: #ffde59; /* Accent color on hover */
+  color: #f8c804; /* Accent color on hover */
 }
 .logo-link img {
   height: 48px;
