--- a/css/main.css
+++ b/css/main.css
@@ -198,4 +198,10 @@ thead {
   }
 }
 }
-
+.home-bg {
+  background-image: url('../assets/h-bg.jpg'); /* Adjust path if needed */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed; /* Optional: keeps image fixed on scroll */
+}
