--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ thead {
 }
 }
 .home-bg {
-  background-image: url('../assets/h-bg.jpg'); /* Adjust path if needed */
+  background-image: url("/assets/h-bg.jpg'); /* Adjust path if needed */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
